# book_genre_classifier_V2

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  reset_errors.py
agents/: _limiter_state.py  graph.py  prompts.py  schemas.py  state.py
agents/nodes/: classifier.py  save.py  search.py
agents/tools/: find_book.py
config/: config.yaml
data/gold/: tombo_gold.parquet
src/: bronze.py  gold.py  ingest_sheet.py  pipeline.py  silver.py  to_xlsx.py
