[project]
name = "book-genre-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.14.1",
    "duckduckgo-search>=8.1.1",
    "google-api-python-client>=2.194.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "grandalf>=0.8",
    "jupyter>=1.1.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.31",
    "langchain-google-community>=3.0.5",
    "langchain-google-genai>=4.2.2",
    "langgraph>=1.1.6",
    "lxml>=6.1.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "pydantic>=2.13.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "streamlit>=1.57.0",
    "tdqm>=0.0.1",
]
